Signup, login and footer fixes (css)

--- a/app/account.html
+++ b/app/account.html
@@ -619,7 +619,7 @@
         <button class="modal__success-btn btn">Продолжить</button>
       </div>
     </div> -->
-    <div class="modal modal__review active">
+    <div class="modal modal__review">
       <div class="modal__close modal__cross">x</div>
       <div class="modal__review-inner">
         <form action="" class="modal__review-form">
