Account modal edit service: fixed edit-form btns (css)

--- a/app/index.html
+++ b/app/index.html
@@ -125,7 +125,7 @@
 
                     <a href="#" class="top__btn btn">Заполнить анкету</a>
                   </div>
-                  <div class="top__item-tags">
+                  <!--                   <div class="top__item-tags">
                     <ul class="top__tags-list">
                       <li class="top__tag-item">
                         <a href="#" class="top__tag-link">Психологи</a>
@@ -152,7 +152,7 @@
                     <span>Смотреть всех </span
                     ><svg class="top__more-icon" width="26" height="16">
                       <use xlink:href="#icon-arrow-more"></use></svg
-                  ></a>
+                  ></a> -->
                 </div>
               </div>
             </div>
@@ -172,34 +172,6 @@
 
                     <a href="#" class="top__btn btn">Заполнить анкету</a>
                   </div>
-                  <div class="top__item-tags">
-                    <ul class="top__tags-list">
-                      <li class="top__tag-item">
-                        <a href="#" class="top__tag-link">Психологи</a>
-                      </li>
-                      <li class="top__tag-item">
-                        <a href="#" class="top__tag-link">Диетологи</a>
-                      </li>
-                      <li class="top__tag-item">
-                        <a href="#" class="top__tag-link">Астрологи</a>
-                      </li>
-                      <li class="top__tag-item">
-                        <a href="#" class="top__tag-link">Арт-терапия</a>
-                      </li>
-                      <li class="top__tag-item">
-                        <a href="#" class="top__tag-link">Коучи</a>
-                      </li>
-                      <li class="top__tag-item">
-                        <a href="#" class="top__tag-link">Стилисты</a>
-                      </li>
-                    </ul>
-                  </div>
-
-                  <a href="#" class="top__more-link">
-                    <span>Смотреть всех </span
-                    ><svg class="top__more-icon" width="26" height="16">
-                      <use xlink:href="#icon-arrow-more"></use></svg
-                  ></a>
                 </div>
               </div>
             </div>
@@ -219,38 +191,11 @@
 
                     <a href="#" class="top__btn btn">Заполнить анкету</a>
                   </div>
-                  <div class="top__item-tags">
-                    <ul class="top__tags-list">
-                      <li class="top__tag-item">
-                        <a href="#" class="top__tag-link">Психологи</a>
-                      </li>
-                      <li class="top__tag-item">
-                        <a href="#" class="top__tag-link">Диетологи</a>
-                      </li>
-                      <li class="top__tag-item">
-                        <a href="#" class="top__tag-link">Астрологи</a>
-                      </li>
-                      <li class="top__tag-item">
-                        <a href="#" class="top__tag-link">Арт-терапия</a>
-                      </li>
-                      <li class="top__tag-item">
-                        <a href="#" class="top__tag-link">Коучи</a>
-                      </li>
-                      <li class="top__tag-item">
-                        <a href="#" class="top__tag-link">Стилисты</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <a href="#" class="top__more-link">
-                    <span>Смотреть всех </span
-                    ><svg class="top__more-icon" width="26" height="16">
-                      <use xlink:href="#icon-arrow-more"></use></svg
-                  ></a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="swiper-pagination swiper-pagination--top"></div>
+          <!--  <div class="swiper-pagination swiper-pagination--top"></div> -->
         </div>
       </section>
       <section class="description">
