--- a/app/specialists.html
+++ b/app/specialists.html
@@ -241,7 +241,7 @@
               </div>
               <div class="expert-card__info">
                 <ul class="expert-card__list">
-                  <li class="expert-card__item ticket">
+                  <!--  <li class="expert-card__item ticket">
                     <img
                       src="./images/expert-2.jpg"
                       alt="Фото специалиста"
@@ -253,7 +253,7 @@
                       </h6>
                       <span class="ticket__price">5 000 руб.</span>
                     </div>
-                  </li>
+                  </li> -->
                   <li class="expert-card__item ticket">
                     <img
                       src="./images/expert-3.jpg"
