--- a/app/account-long.html
+++ b/app/account-long.html
@@ -381,7 +381,8 @@
       <section class="about">
         <div class="container">
           <div class="about__top">
-            <h2 class="about__title section-title">Специалист про себя</h2>
+            <h2 class="about__title about__title--desktop section-title">Специалист про себя</h2>
+            <h2 class="about__title about__title--mobile section-title">О себе</h2>
             <button class="about__btn btn">Редактировать</button>
           </div>
           <div class="about__info-wrapper">
