Main page: fixes (html + css)

--- a/app/index.html
+++ b/app/index.html
@@ -231,14 +231,13 @@
               </div>
             </div>
           </div>
-          <!--  <div class="swiper-pagination swiper-pagination--top"></div> -->
+          <div class="swiper-pagination swiper-pagination--top"></div>
         </div>
       </section>
       <section class="description">
         <div class="container">
           <p class="description__title">
-            Ярдэм переводится с татарского - <span>«помощь»</span>, а ярдэмчé -
-            <span>«помощница»</span>.
+            Мы предоставляем платформу разнообразных услуг от женщин для женщин
           </p>
           <ul class="description__services-list">
             <li class="description__service-item card">
@@ -279,35 +278,43 @@
           </p>
           <ul class="description__packages-list">
             <li class="description__package-item">
-              <img
-                src="./images/present.png"
-                alt="Подарок"
-                class="description__package-img"
-              />
-              <p class="description__package-quantity">2 услуги</p>
-              <div class="description__package-bottom">
-                <span class="description__package-price">5 000 рублей</span>
-                <a href="#" class="description__package-arrow">
-                  <svg width="30" height="16">
-                    <use xlink:href="#icon-arrow-package"></use>
-                  </svg>
-                </a>
+              <div class="description__package-inner">
+                <p class="description__package-quantity">2 услуги</p>
+                <div class="description__package-bottom">
+                  <span class="description__package-price">3 000 ₽</span>
+                  <a href="#" class="description__package-arrow">
+                    <svg width="30" height="16">
+                      <use xlink:href="#icon-arrow-package"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="description__package-item">
-              <img
-                src="./images/present.png"
-                alt="Подарок"
-                class="description__package-img"
-              />
-              <p class="description__package-quantity">4 услуги</p>
-              <div class="description__package-bottom">
-                <span class="description__package-price">9 000 рублей</span>
-                <a href="#" class="description__package-arrow">
-                  <svg width="30" height="16">
-                    <use xlink:href="#icon-arrow-package"></use>
-                  </svg>
-                </a>
+              <div class="description__package-inner">
+                <p class="description__package-quantity">4 услуги</p>
+                <div class="description__package-bottom">
+                  <span class="description__package-price">5 000 ₽</span>
+                  <a href="#" class="description__package-arrow">
+                    <svg width="30" height="16">
+                      <use xlink:href="#icon-arrow-package"></use>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </li>
+
+            <li class="description__package-item">
+              <div class="description__package-inner">
+                <p class="description__package-quantity">8 услуг</p>
+                <div class="description__package-bottom">
+                  <span class="description__package-price">9 000 ₽</span>
+                  <a href="#" class="description__package-arrow">
+                    <svg width="30" height="16">
+                      <use xlink:href="#icon-arrow-package"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
           </ul>
@@ -333,10 +340,10 @@
 
       <section class="situations">
         <div class="container">
-          <h2 class="situations__title title-main">
+          <!--           <h2 class="situations__title title-main">
             В каких ситуациях мы можем помочь?
-          </h2>
-          <ul class="situations__list">
+          </h2> -->
+          <!--           <ul class="situations__list">
             <li class="situations__item card">
               <div
                 class="card__top"
@@ -363,7 +370,7 @@
                 style="background-image: url('./images/situation-3.jpg')"
               ></div>
               <div class="card__bottom">
-                <p class="card__text">Нуждаетесь<br />в&nbsp;поддержке</p>
+                <p class="card__text">Нуждаетесь в&nbsp;поддержке</p>
               </div>
             </li>
             <li class="situations__item card">
@@ -372,9 +379,7 @@
                 style="background-image: url('./images/situation-4.jpg')"
               ></div>
               <div class="card__bottom">
-                <p class="card__text">
-                  Недовольны собой<br />и&nbsp;своим телом
-                </p>
+                <p class="card__text">Недовольны собой и&nbsp;своим телом</p>
               </div>
             </li>
             <li class="situations__item card">
@@ -395,7 +400,7 @@
                 <p class="card__text">Ищете возможность развиваться</p>
               </div>
             </li>
-          </ul>
+          </ul> -->
           <div class="situations__banner banner">
             <div class="banner__inner">
               <h3 class="banner__title">
