Main page: fixes (html +css)

--- a/app/index.html
+++ b/app/index.html
@@ -246,7 +246,7 @@
                 style="background-image: url('./images/service-item-1.jpg')"
               ></div>
               <div class="card__bottom">
-                <p class="card__text">Подберите услугу под любой запрос</p>
+                <a class="card__text">Подберите услугу под любой запрос</a>
               </div>
             </li>
             <li class="description__service-item card">
@@ -255,9 +255,9 @@
                 style="background-image: url('./images/service-item-2.jpg')"
               ></div>
               <div class="card__bottom">
-                <p class="card__text">
+                <a class="card__text">
                   Получите помощь в трудной жизненной ситуации
-                </p>
+                </a>
               </div>
             </li>
             <li class="description__service-item card">
@@ -266,9 +266,9 @@
                 style="background-image: url('./images/service-item-3.jpg')"
               ></div>
               <div class="card__bottom">
-                <p class="card__text">
+                <a class="card__text">
                   Получите доступ к продуктам наших специалистов
-                </p>
+                </a>
               </div>
             </li>
           </ul>
@@ -350,7 +350,7 @@
                 style="background-image: url('./images/situation-1.jpg')"
               ></div>
               <div class="card__bottom">
-                <p class="card__text">Попали в трудную жизненную ситуацию</p>
+                <a class="card__text">Попали в трудную жизненную ситуацию</a>
               </div>
             </li>
             <li class="situations__item card">
@@ -359,9 +359,9 @@
                 style="background-image: url('./images/situation-2.jpg')"
               ></div>
               <div class="card__bottom">
-                <p class="card__text">
+                <a class="card__text">
                   Испытываете трудности в&nbsp;отношениях
-                </p>
+                </a>
               </div>
             </li>
             <li class="situations__item card">
@@ -370,7 +370,7 @@
                 style="background-image: url('./images/situation-3.jpg')"
               ></div>
               <div class="card__bottom">
-                <p class="card__text">Нуждаетесь в&nbsp;поддержке</p>
+                <a class="card__text">Нуждаетесь в&nbsp;поддержке</a>
               </div>
             </li>
             <li class="situations__item card">
@@ -379,7 +379,7 @@
                 style="background-image: url('./images/situation-4.jpg')"
               ></div>
               <div class="card__bottom">
-                <p class="card__text">Недовольны собой и&nbsp;своим телом</p>
+                <a class="card__text">Недовольны собой и&nbsp;своим телом</a>
               </div>
             </li>
             <li class="situations__item card">
@@ -388,7 +388,7 @@
                 style="background-image: url('./images/situation-5.jpg')"
               ></div>
               <div class="card__bottom">
-                <p class="card__text">Беспокоят проблемы со&nbsp;здоровьем</p>
+                <a class="card__text">Беспокоят проблемы со&nbsp;здоровьем</a>
               </div>
             </li>
             <li class="situations__item card">
@@ -397,7 +397,7 @@
                 style="background-image: url('./images/situation-6.jpg')"
               ></div>
               <div class="card__bottom">
-                <p class="card__text">Ищете возможность развиваться</p>
+                <a class="card__text">Ищете возможность развиваться</a>
               </div>
             </li>
           </ul> -->
@@ -415,6 +415,141 @@
                 ><svg class="banner__more-icon" width="26" height="16">
                   <use xlink:href="#icon-arrow-more"></use></svg
               ></a>
+              <img
+                src="./images/banner-log.png"
+                alt="Лого"
+                class="banner__logo"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="spheres">
+        <div class="container">
+          <h2 class="spheres__title title-main">Сферы наших специалистов</h2>
+          <div class="spheres__list-wrapper">
+            <ul class="spheres__list">
+              <li class="spheres__list-item">
+                <a href="#" class="spheres__item-link">
+                  <span>Красота</span
+                  ><svg class="spheres__link-icon" width="26" height="16">
+                    <use xlink:href="#icon-arrow-more"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="spheres__list-item">
+                <a href="#" class="spheres__item-link">
+                  <span>Самопознание</span
+                  ><svg class="spheres__link-icon" width="26" height="16">
+                    <use xlink:href="#icon-arrow-more"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="spheres__list-item">
+                <a href="#" class="spheres__item-link">
+                  <span>Юридические услуги</span
+                  ><svg class="spheres__link-icon" width="26" height="16">
+                    <use xlink:href="#icon-arrow-more"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="spheres__list-item">
+                <a href="#" class="spheres__item-link">
+                  <span>Здоровье</span
+                  ><svg class="spheres__link-icon" width="26" height="16">
+                    <use xlink:href="#icon-arrow-more"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="spheres__list-item">
+                <a href="#" class="spheres__item-link">
+                  <span>Бизнес</span
+                  ><svg class="spheres__link-icon" width="26" height="16">
+                    <use xlink:href="#icon-arrow-more"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="spheres__list-item">
+                <a href="#" class="spheres__item-link">
+                  <span>Энергопрактики</span
+                  ><svg class="spheres__link-icon" width="26" height="16">
+                    <use xlink:href="#icon-arrow-more"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="spheres__list-item">
+                <a href="#" class="spheres__item-link">
+                  <span>Обучение</span
+                  ><svg class="spheres__link-icon" width="26" height="16">
+                    <use xlink:href="#icon-arrow-more"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="spheres__list-item">
+                <a href="#" class="spheres__item-link">
+                  <span>Личностный рост</span
+                  ><svg class="spheres__link-icon" width="26" height="16">
+                    <use xlink:href="#icon-arrow-more"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="spheres__list-item">
+                <a href="#" class="spheres__item-link">
+                  <span>Творчество</span
+                  ><svg class="spheres__link-icon" width="26" height="16">
+                    <use xlink:href="#icon-arrow-more"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="spheres__list-item">
+                <a href="#" class="spheres__item-link">
+                  <span>Эзотерика</span
+                  ><svg class="spheres__link-icon" width="26" height="16">
+                    <use xlink:href="#icon-arrow-more"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="spheres__list-item">
+                <a href="#" class="spheres__item-link">
+                  <span>Психотерапия</span
+                  ><svg class="spheres__link-icon" width="26" height="16">
+                    <use xlink:href="#icon-arrow-more"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="spheres__list-item">
+                <a href="#" class="spheres__item-link">
+                  <span>Альтернативная</span
+                  ><svg class="spheres__link-icon" width="26" height="16">
+                    <use xlink:href="#icon-arrow-more"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <button class="spheres__btn btn">Показать все</button>
+          <div class="spheres__banner banner banner--spheres">
+            <div class="banner__inner">
+              <h3 class="banner__title">
+                Наши специалисты также готовы предложить вам свои товары
+              </h3>
+              <p class="banner__text">
+                Переходите на страницу магазина, выберете нужно категорию,
+                уточните дополнительные вопросы в чате перед покупкой
+              </p>
+              <a href="#" class="banner__more-link">
+                <span>Посмотреть</span
+                ><svg class="banner__more-icon" width="26" height="16">
+                  <use xlink:href="#icon-arrow-more"></use></svg
+              ></a>
+              <img
+                src="./images/banner-log.png"
+                alt="Лого"
+                class="banner__logo"
+              />
             </div>
           </div>
         </div>
