Main page: banner fixes (html + css)

--- a/app/index.html
+++ b/app/index.html
@@ -536,7 +536,7 @@
               <h3 class="banner__title">
                 Наши специалисты также готовы предложить вам свои товары
               </h3>
-              <p class="banner__text">
+              <p class="banner__text banner__text--spheres">
                 Переходите на страницу магазина, выберете нужно категорию,
                 уточните дополнительные вопросы в чате перед покупкой
               </p>
