Modal reviews: fixed inputs (html)

--- a/app/account.html
+++ b/app/account.html
@@ -631,14 +631,14 @@
                 disabled
                 checked
                 class="rating__input rating__input--none visually-hidden"
-                id="star0-top"
+                id="star0-review"
                 value="0"
                 type="radio"
-                name="rating"
+                name="rating-review"
               />
 
               <label
-                for="star1-top"
+                for="star1-review"
                 class="rating__label"
                 aria-label="1 звезда"
               >
@@ -648,58 +648,70 @@
               </label>
               <input
                 type="radio"
-                id="star1-top"
+                id="star1-review"
                 class="rating__input visually-hidden"
-                name="rating"
+                name="rating-review"
                 value="1"
               />
 
-              <label for="star2-top" class="rating__label" aria-label="2 звезды"
+              <label
+                for="star2-review"
+                class="rating__label"
+                aria-label="2 звезды"
                 ><svg class="rating__star" width="24" height="24">
                   <use xlink:href="#star"></use></svg
               ></label>
               <input
                 type="radio"
-                id="star2-top"
+                id="star2-review"
                 class="rating__input visually-hidden"
-                name="rating"
+                name="rating-review"
                 value="2"
               />
 
-              <label for="star3-top" class="rating__label" aria-label="3 звезды"
+              <label
+                for="star3-review"
+                class="rating__label"
+                aria-label="3 звезды"
                 ><svg class="rating__star" width="24" height="24">
                   <use xlink:href="#star"></use></svg
               ></label>
               <input
                 type="radio"
-                id="star3-top"
+                id="star3-review"
                 class="rating__input visually-hidden"
-                name="rating"
+                name="rating-review"
                 value="3"
                 checked
               />
 
-              <label for="star4-top" class="rating__label" aria-label="4 звезды"
+              <label
+                for="star4-review"
+                class="rating__label"
+                aria-label="4 звезды"
                 ><svg class="rating__star" width="24" height="24">
                   <use xlink:href="#star"></use></svg
               ></label>
               <input
                 type="radio"
-                id="star4-top"
+                id="star4-review"
                 class="rating__input visually-hidden"
-                name="rating"
+                name="rating-review"
                 value="4"
               />
 
-              <label for="star5-top" class="rating__label" aria-label="5 звезд"
+              <label
+                for="star5-review"
+                class="rating__label"
+                aria-label="5 звезд"
                 ><svg class="rating__star" width="24" height="24">
                   <use xlink:href="#star"></use></svg
               ></label>
               <input
                 type="radio"
-                id="star5-top"
+                id="star5-review"
                 class="rating__input visually-hidden"
-                name="rating"
+                name="rating-review"
                 value="5"
               />
             </div>
