All pages: added overlay for opened menu (html + js)

--- a/app/index.html
+++ b/app/index.html
@@ -722,6 +722,8 @@
         </div>
       </div>
     </footer>
+
+    <div class="overlay"></div>
     <svg
       class="visually-hidden"
       width="0"
