--- a/app/login.html
+++ b/app/login.html
@@ -157,6 +157,7 @@
         </div>
       </div>
     </footer>
+    <div class="overlay"></div>
     <svg
       class="visually-hidden"
       width="0"
