--- a/app/about.html
+++ b/app/about.html
@@ -216,6 +216,7 @@
         </div>
       </div>
     </footer>
+    <div class="overlay"></div>
     <svg
       class="visually-hidden"
       width="0"
