--- a/app/signup.html
+++ b/app/signup.html
@@ -208,6 +208,7 @@
         </div>
       </div>
     </footer>
+    <div class="overlay"></div>
     <svg
       class="visually-hidden"
       width="0"
