--- a/app/specialists.html
+++ b/app/specialists.html
@@ -1004,6 +1004,7 @@
         </div>
       </div>
     </footer>
+    <div class="overlay"></div>
     <svg
       class="visually-hidden"
       width="0"
