--- a/app/specialists.html
+++ b/app/specialists.html
@@ -7,9 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cormorant:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300;400;500;600;700&family=Inter:wght@400;500;700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
+    >
     <link rel="stylesheet" href="css/style.min.css" />
     <script defer src="js/main.min.js"></script>
     <title>Ярдэмче</title>
