Main page: fixes news btn and news grid (html + css)

--- a/app/index.html
+++ b/app/index.html
@@ -670,7 +670,7 @@
             >
               <div class="news__item-inner">
                 <div class="news__item-info">
-                  <a href="#" class="news__item-text">ВеУ нас новый инвестор</a>
+                  <a href="#" class="news__item-text">У нас новый инвестор</a>
                 </div>
               </div>
             </li>
@@ -697,8 +697,9 @@
               </div>
             </li>
           </ul>
-
-          <button class="news__btn btn">Показать еще</button>
+          <div class="news__btn-container">
+            <a class="news__btn btn">Показать еще</a>
+          </div>
         </div>
       </section>
     </main>
